--- a/clothing_alerts_ca.html
+++ b/clothing_alerts_ca.html
@@ -82,6 +82,12 @@
             </div>
         </section>
 
+        <section class="description">
+            <a href="https://play.google.com/store/apps/details?id=rstu.clothing_alerts" target="_blank">
+                <img id="google-badge" alt="Get it on Google Play" src="https://play.google.com/intl/en/badges/static/images/badges/en_badge_web_generic.png" />
+            </a>
+        </section>
+
         <section class="other-apps">
             <h2>Altres aplicacions que et poden interessar</h2>
             <div class="other-apps-container">
