--- a/clothing_alerts_de.html
+++ b/clothing_alerts_de.html
@@ -81,6 +81,12 @@
                 <img src="images/s_ca_4.jpg" alt="Screenshot 4">
             </div>
         </section>
+
+        <section class="description">
+            <a href="https://play.google.com/store/apps/details?id=rstu.clothing_alerts" target="_blank">
+                <img id="google-badge" alt="Get it on Google Play" src="https://play.google.com/intl/en/badges/static/images/badges/en_badge_web_generic.png" />
+            </a>
+        </section>
     </main>
     
     <footer>
