--- a/clothing_alerts_ro.html
+++ b/clothing_alerts_ro.html
@@ -67,6 +67,12 @@
             </div>
         </section>
 
+        <section class="description">
+            <a href="https://play.google.com/store/apps/details?id=rstu.clothing_alerts" target="_blank">
+                <img id="google-badge" alt="Get it on Google Play" src="https://play.google.com/intl/en/badges/static/images/badges/en_badge_web_generic.png" />
+            </a>
+        </section>
+
         <section class="screenshots">
             <div class="screenshot">
                 <img src="images/s_ca_1.jpg" alt="Captură de Ecran 1">
