--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@
             </div>
         </section>
 
+        <section class="description">
+            <h3>Download the app on the Play Store:</h3>
+            <a href="https://play.google.com/store/apps/details?id=rstu.clothing_alerts" target="_blank">
+                <img id="google-badge" alt="Get it on Google Play" src="https://play.google.com/intl/en/badges/static/images/badges/en_badge_web_generic.png" />
+            </a>
+        </section>
+
         <section class="other-apps">
             <h2>Other apps you might be interested in</h2>
             <div class="other-apps-container">
