--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <h2>Other apps you might be interested in</h2>
             <div class="other-apps-container">
                 <div class="app">
-                    <a href="wallaalerts.com/regalos_segunda_mano_en.html">
+                    <a href="https://wallaalerts.com/regalos_segunda_mano_en.html">
                         <img class="logo-other-app" src="images/logo_rsm.png" alt="Second Hand Gifts Icon">
                         <h3>Second Hand Gifts</h3>
                         <p>Find free products on Wallapop in your area.</p>
@@ -102,7 +102,7 @@
                     <a href="https://play.google.com/store/apps/details?id=rstu.cosasgratis_alerts" target="_blank" class="cta-button">Download</a>
                 </div>
                 <div class="app">
-                    <a href="wallaalerts.com/walla_alerts_en.html">
+                    <a href="https://wallaalerts.com/walla_alerts_en.html">
                         <img class="logo-other-app" src="images/logo_wa.png" alt="Walla Alerts Icon">
                         <h3>Walla Alerts</h3>
                         <p>Instant alerts for Wallapop listings.</p>
@@ -110,7 +110,7 @@
                     <a href="https://play.google.com/store/apps/details?id=rstu.wallaalerts" target="_blank" class="cta-button">Download</a>
                 </div>
                 <div class="app">
-                    <a href="wallaalerts.com/tc_alerts_en.html">
+                    <a href="https://wallaalerts.com/tc_alerts_en.html">
                         <img class="logo-other-app" src="images/logo_tc.png" alt="tc alerts Icon">
                         <h3>tc alerts</h3>
                         <p>Alerts for todocoleccion: ideal for collectors.</p>
@@ -118,7 +118,7 @@
                     <a href="https://play.google.com/store/apps/details?id=rstu.tc_alerts" target="_blank" class="cta-button">Download</a>
                 </div>
                 <div class="app">
-                    <a href="wallaalerts.com/cash_conv_alerts_en.html">
+                    <a href="https://wallaalerts.com/cash_conv_alerts_en.html">
                         <img class="logo-other-app" src="images/logo_cc.png" alt="Cash Conv Alerts Icon">
                         <h3>Cash Conv Alerts</h3>
                         <p>Notifications of new items in Cash Converters.</p>
