--- a/clothing_alerts_es.html
+++ b/clothing_alerts_es.html
@@ -93,7 +93,7 @@
             <h2>Otras aplicaciones que te pueden interesar</h2>
             <div class="other-apps-container">
                 <div class="app">
-                    <a href="wallaalerts.com/regalos_segunda_mano_es.html">
+                    <a href="https://wallaalerts.com/regalos_segunda_mano_es.html">
                         <img class="logo-other-app" src="images/logo_rsm.png" alt="Icono de Regalos Segunda Mano">
                         <h3>Regalos Segunda Mano</h3>
                         <p>Encuentra productos gratis en Wallapop en tu área.</p>
@@ -109,7 +109,7 @@
                     <a href="https://play.google.com/store/apps/details?id=rstu.wallaalerts" target="_blank" class="cta-button">Descargar</a>
                 </div>
                 <div class="app">
-                    <a href="wallaalerts.com/tc_alerts_es.html">
+                    <a href="https://wallaalerts.com/tc_alerts_es.html">
                         <img class="logo-other-app" src="images/logo_tc.png" alt="Icono de tc alerts">
                         <h3>tc alerts</h3>
                         <p>Alertas para todocoleccion: ideal para coleccionistas.</p>
@@ -117,7 +117,7 @@
                     <a href="https://play.google.com/store/apps/details?id=rstu.tc_alerts" target="_blank" class="cta-button">Descargar</a>
                 </div>
                 <div class="app">
-                    <a href="wallaalerts.com/cash_conv_alerts_es.html">
+                    <a href="https://wallaalerts.com/cash_conv_alerts_es.html">
                         <img class="logo-other-app" src="images/logo_cc.png" alt="Icono de Cash Conv Alerts">
                         <h3>Cash Conv Alerts</h3>
                         <p>Notificaciones de nuevos artículos en Cash Converters.</p>
