--- a/clothing_alerts_ca.html
+++ b/clothing_alerts_ca.html
@@ -92,7 +92,7 @@
             <h2>Altres aplicacions que et poden interessar</h2>
             <div class="other-apps-container">
                 <div class="app">
-                    <a href="https://wallaalerts.com/regalos_segunda_mano_ca.html">
+                    <a href="https://wallaalerts.com/regalos_segunda_mano.html">
                         <img class="logo-other-app" src="images/logo_rsm.png" alt="Icona de Regals Segona Mà">
                         <h3>Regals Segona Mà</h3>
                         <p>Troba productes gratuïts a Wallapop a la teva àrea.</p>
@@ -108,7 +108,7 @@
                     <a href="https://play.google.com/store/apps/details?id=rstu.wallaalerts" target="_blank" class="cta-button">Descarregar</a>
                 </div>
                 <div class="app">
-                    <a href="https://wallaalerts.com/tc_alerts_ca.html">
+                    <a href="https://wallaalerts.com/tc_alerts.html">
                         <img class="logo-other-app" src="images/logo_tc.png" alt="Icona de tc alerts">
                         <h3>tc alerts</h3>
                         <p>Alertes per a todocoleccion: ideal per a col·leccionistes.</p>
@@ -116,7 +116,7 @@
                     <a href="https://play.google.com/store/apps/details?id=rstu.tc_alerts" target="_blank" class="cta-button">Descarregar</a>
                 </div>
                 <div class="app">
-                    <a href="https://wallaalerts.com/cash_conv_alerts_ca.html">
+                    <a href="https://wallaalerts.com/cash_conv_alerts.html">
                         <img class="logo-other-app" src="images/logo_cc.png" alt="Icona de Cash Conv Alerts">
                         <h3>Cash Conv Alerts</h3>
                         <p>Notificacions de nous articles a Cash Converters.</p>
