Update language select and screenshots

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center">
                     <div class="col-12 text-center mb-5">
-                        <h2 class="display-4 lh-1 mb-4">App Screenshots</h2>
+                        <h2 class="display-4 lh-1 mb-4">Inside the app</h2>
                         <p class="lead fw-normal text-muted">See how Clothing Alerts makes your Vinted shopping experience better</p>
                     </div>
                 </div>
@@ -233,8 +233,8 @@
         
         <!-- Footer-->
         <footer class="bg-black text-center py-5">
-            <div class="container px-5">
-                <select id="language-select" class="form-select form-select-sm w-auto" onchange="changeLanguage()">
+            <div class="container px-5 d-flex justify-content-center">
+                <select id="language-select" class="form-select form-select-sm w-auto mb-3" onchange="changeLanguage()">
                     <option value="en" selected>English</option>
                     <option value="ca">Català</option>
                     <option value="da">Dansk</option>
@@ -268,7 +268,7 @@
             <div class="modal-dialog modal-dialog-centered modal-lg">
             <div class="modal-content" style="background-color: #0b73b8;">
                 <div class="modal-header bg-gradient-primary-to-secondary">
-                <h5 class="modal-title font-alt text-white" id="screenshotModalLabel">App Screenshots</h5>
+                <h5 class="modal-title font-alt text-white" id="screenshotModalLabel">Inside the app</h5>
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body p-0" style="max-height: 80vh; overflow-y: auto;">
