--- a/clothing_alerts_it.html
+++ b/clothing_alerts_it.html
@@ -108,7 +108,9 @@
     <script>
         function changeLanguage() {
             var language = document.getElementById("language-select").value;
+            
             var newUrl = "https://clothing-alerts.com/clothing_alerts_" + language + ".html";
+            if (language == "en") newUrl = "https://clothing-alerts.com";
             window.location.href = newUrl;
         }
     </script>
