--- a/clothing_alerts_pl.html
+++ b/clothing_alerts_pl.html
@@ -101,6 +101,7 @@
         function changeLanguage() {
             var language = document.getElementById("language-select").value;
             var newUrl = "https://clothing-alerts.com/clothing_alerts_" + language + ".html";
+            if (language == "en") newUrl = "https://clothing-alerts.com";
             window.location.href = newUrl;
         }
     </script>
