--- a/index.html
+++ b/index.html
@@ -322,7 +322,9 @@
         <script>
             function changeLanguage() {
                 var language = document.getElementById("language-select").value;
-                var newUrl = "https://clothing-alerts.com/clothing_alerts_" + language + ".html";
+                
+            var newUrl = "https://clothing-alerts.com/clothing_alerts_" + language + ".html";
+            if (language == "en") newUrl = "https://clothing-alerts.com";
                 window.location.href = newUrl;
             }
         </script>
