--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class="col-lg-6">
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
-                            <h1 class="display-1 lh-1 mb-3">Find the best clothing deals instantly!</h1>
+                            <h1 class="display-1 lh-1 mb-3">Find the best clothing deals on Vinted instantly!</h1>
                             <p class="lead fw-normal text-muted mb-5">Clothing Alerts is the ultimate app for bargain hunters on Vinted. Receive instant notifications for new listings that match your searches. No more constant monitoring, the app does it for you!</p>
                             <div class="d-flex flex-column flex-lg-row align-items-center">
                                 <a class="me-lg-3 mb-4 mb-lg-0" href="https://play.google.com/store/apps/details?id=rstu.clothing_alerts" target="_blank">
